Tue Jun 15 15:26:54 BST 2004  Olly Betts <olly@survex.com>

	* HACKING: Updated the list of tasks required for a new release.

Tue Jun 15 15:24:04 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am,configure.in,extra/Makefile.am: Unify the shlib version
	  numbers (the benefit of tracking them individually makes it hard
	  to justify the extra work required, and have one version simplifies
	  debian packaging too).

Tue Jun 15 14:52:36 BST 2004  Robert Pollak <robert.pollak@fabasoft.com>

	* extra/xapian/queryparser.h: Fixed memory leaked upon QueryParser
	  destruction.

Fri Jun 11 02:18:35 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Refactored a loop.

Fri Jun 11 02:17:05 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Fixed bug which meant we
	  sometimes failed to remove a posting when deleting or replacing
	  a document.

Fri Jun 11 02:16:16 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc,
	  backends/quartz/quartz_postlist.h: Merged move_to() into skip_to().

Fri Jun 11 02:14:56 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Fixed typo in comment.

Thu May 27 15:41:45 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: Eliminated the
	  split cursor - we only actually need a single block buffer to
	  handle splitting blocks.

Wed May 26 04:02:18 BST 2004  Olly Betts <olly@survex.com>

	* include/om/om.h,include/xapian/errortypes.h: Removed several unused
	  Xapian::Error subclasses (these were used by the indexer framework
	  which we decided was a failed experiment).

Wed May 26 01:54:13 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: More DEBUGCALL
	  tracing added; split_root now uses level member rather than a
	  parameter.

Sun May 23 00:56:41 BST 2004  Olly Betts <olly@survex.com>
